--- a/static/css/montaigne.css
+++ b/static/css/montaigne.css
@@ -45,13 +45,13 @@ h1{
 	font-weight:bold;
 }
 
-.wit_1582{
+.wit_#1582{
 	display: none;
 }
 
-.wit_1588{
+.wit_#1588{
 	display: none;
 }
-.wit_1595{
+.wit_#1595{
 	
 }
