--- a/templates/home.xhtml
+++ b/templates/home.xhtml
@@ -38,9 +38,8 @@
            </div>
             <div id="primary" class="home">
               <section id="accueil">  
-                <h1>{title} {}</h1>
+                <h3>{title}</h3>
                   <section>{content}</section>
-    
               </section>
             </div>
           </div>
