fix version display

--- a/static/css/montaigne.css
+++ b/static/css/montaigne.css
@@ -49,13 +49,13 @@ h1{
 	font-style: italic;
 }
 
-.wit_1582{
+.wit_e1582{
 	display: none;
 }
 
-.wit_1588{
+.wit_e1588{
 	display: none;
 }
-.wit_1595{
+.wit_e1595{
 	
 }
