--- a/static/css/montaigne.css
+++ b/static/css/montaigne.css
@@ -33,6 +33,7 @@ margin-bottom: 1.5em;
 	width: 960px;
 	position: relative;
 	float: none;
+	text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6
@@ -56,6 +57,5 @@ h1{
 .wit_e1588{
 	display: none;
 }
-.wit_e1595{
-	
+.wit_e1595{	
 }
