--- a/static/css/montaigne.css
+++ b/static/css/montaigne.css
@@ -33,7 +33,7 @@ margin-bottom: 1.5em;
 	width: 960px;
 	position: relative;
 	float: none;
-	text-align: center;
+	text-align: justify;
 }
 
 h1, h2, h3, h4, h5, h6
