--- a/templates/inc_primary-nav.xhtml
+++ b/templates/inc_primary-nav.xhtml
@@ -6,6 +6,9 @@
               <li class="nav-entree ">
                 <a href="/montaigne/essais">Essais</a>
               </li>
+              <li class="nav-entree ">
+                <a href="/montaigne/rapports">Rapports</a>
+              </li>
             </ul>
  </div>
           
