--- a/templates/inc_reportTitleItem.xhtml
+++ b/templates/inc_reportTitleItem.xhtml
@@ -2,4 +2,4 @@
   TODO : revenir à un système d'attributs @data, par exemple @data-content et @data-attribute pour une écriture plus propre
   réécrire la fontion synopsx.mappings.htmlWrapping:simplePattern en fonction de ce changement
  -->
-<div><a href="/montaigne/rapport/{id}">{title}</a></div>
+<div><a href="/montaigne/rapport/{id}">{author}</a></div>
