--- a/templates/home.xhtml
+++ b/templates/home.xhtml
@@ -38,7 +38,7 @@
            </div>
             <div id="primary" class="home">
               <section id="accueil">  
-                <h3>{title}</h3>
+                <h2 class="textTitle">{title}</h2>
                   <section>{content}</section>
               </section>
             </div>
