affiche les auteurs des rapports

--- a/templates/home.xhtml
+++ b/templates/home.xhtml
@@ -39,6 +39,7 @@
             <div id="primary" class="home">
               <section id="accueil">  
                 <h1 class="textTitle">{title}</h1>
+                <h2 class="author">{author}</h2>
                   <section>{content}</section>
               </section>
             </div>
