add shadow to authors

--- a/static/css/montaigne.css
+++ b/static/css/montaigne.css
@@ -59,11 +59,11 @@ div .bibl .author{
 }
 
 .citation .bibl::before {
-	content:"rtret"	
+	content:"("	;
 }
 
 .citation .bibl::after {
-	content:"ljdfk"	
+	content:")"	;
 }
 
 
