--- a/static/css/montaigne.css
+++ b/static/css/montaigne.css
@@ -58,11 +58,11 @@ div .bibl .author{
 	font-style: italic;
 }
 
-.citation .bibl::before {
+.citation .bibl:before {
 	content:"("	;
 }
 
-.citation .bibl::after {
+.citation .bibl:after {
 	content:")"	;
 }
 
