--- a/templates/inc_personItem.xhtml
+++ b/templates/inc_personItem.xhtml
@@ -6,6 +6,6 @@
 
     <h2 class="type">{title}</h2>
 
-  <div><span>{name}</span> &#160;:&#160;<a href="essai/{essai_id}">{essai_title}</a></div>
+  <div><a href="personne/{id}">{name}</a></div>
 
 </article>
