--- a/templates/inc_primary-nav.xhtml
+++ b/templates/inc_primary-nav.xhtml
@@ -1,14 +1,16 @@
  <div id="horizontal-nav">
             <ul class="navigation">
               <li class="nav-entree ">
-                <a href="/montaigne/editeurs">Editeurs</a>
+                <a href="/montaigne/essais">Essais</a>
               </li>
               <li class="nav-entree ">
-                <a href="/montaigne/essais">Essais</a>
+                <a href="/montaigne/personnes">Personnes</a>
+              </li>
+              <li class="nav-entree ">
+                <a href="/montaigne/editeurs">Editeurs</a>
               </li>
               <li class="nav-entree ">
                 <a href="/montaigne/rapports">Rapports</a>
               </li>
             </ul>
  </div>
-          
