--- a/templates/inc_primary-nav.xhtml
+++ b/templates/inc_primary-nav.xhtml
@@ -7,6 +7,9 @@
                 <a href="/montaigne/personnes">Personnes</a>
               </li>
               <li class="nav-entree ">
+                <a href="/montaigne/lieux">Lieux</a>
+              </li>
+              <li class="nav-entree ">
                 <a href="/montaigne/editeurs">Editeurs</a>
               </li>
               <li class="nav-entree ">
