--- a/templates/inc_quotationItem.xhtml
+++ b/templates/inc_quotationItem.xhtml
@@ -6,6 +6,6 @@
 
     <div class="quote">{quote}</div>
 
-  <div class="reference"><span>{ref}</span>, in&amp;nbsp;<a href="/montaigne/essai/{textId}">{textTitle}</a></div>
+  <div class="reference"><span>{ref}</span>, in <a href="/montaigne/essai/{textId}">{textTitle}</a></div>
 
 </div>
