--- a/templates/inc_primary-nav.xhtml
+++ b/templates/inc_primary-nav.xhtml
@@ -10,6 +10,9 @@
                 <a href="/montaigne/lieux">Lieux</a>
               </li>
               <li class="nav-entree ">
+                <a href="/montaigne/citations">Citations</a>
+              </li>
+              <li class="nav-entree ">
                 <a href="/montaigne/editeurs">Editeurs</a>
               </li>
               <li class="nav-entree ">
