--- a/templates/inc_quotationItem.xhtml
+++ b/templates/inc_quotationItem.xhtml
@@ -3,7 +3,9 @@
   réécrire la fontion synopsx.mappings.htmlWrapping:simplePattern en fonction de ce changement
  -->
 <div class="quotation">
-
+  <div class="author">
+    {author}
+  </div>
     <div class="quote">{quote}</div>
 
   <div class="reference"><span>{ref}</span>, in <span><a href="/montaigne/essai/{textId}">{textTitle}</a></span></div>
