--- a/templates/inc_quotationItem.xhtml
+++ b/templates/inc_quotationItem.xhtml
@@ -3,7 +3,7 @@
   réécrire la fontion synopsx.mappings.htmlWrapping:simplePattern en fonction de ce changement
  -->
 <div class="quotation">
-  <div class="author">
+  <div class="authorQuotation">
     {author}
   </div>
     <div class="quote">{quote}</div>
